--- a/src/CSS/Flexbox/Ejercicios/Maxi/Galeria/estilos.css
+++ b/src/CSS/Flexbox/Ejercicios/Maxi/Galeria/estilos.css
@@ -1,34 +1,43 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 30px;
     background: #000;
-    color: #fff
+    margin: 5vh 5vw;
 }
+
 
 .container {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 20px;
-    background: #2b00ff;
-    padding: 10px;
-    flex-wrap: wrap;
+    width: 90vw;
+    height: 90vh;
+    margin: auto;
 }
 
-.item {
-    background: #ff5151;
-    padding: 5px;
-    min-width: 50px;
-    text-align: center;
-    border: 2px solid #000
+.container img {
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .8;
+    transition: .5s ease;
 }
 
-@media all and (max-width: 260px) {
+.container img:hover {
+    cursor: crosshair;
+    opacity: 1;
+    width: 300px;
+    filter: contrast(120%);
+}
+
+@media (max-width: 600px) {
     .container {
         flex-direction: column;
     }
 
-    .item {
-        min-width: 100px;
+    .container img {
+        height: 0px;
+        width: 90vw;
+    }
+
+    .container img:hover {
+        width: 90vw;
+        height: 60vh;
     }
 }
