--- a/src/CSS/Flexbox/Ejercicios/Julian/Galeria/estilos.css
+++ b/src/CSS/Flexbox/Ejercicios/Julian/Galeria/estilos.css
@@ -1,25 +1,46 @@
 .container {
     display: flex;
-    background: chartreuse;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 10px;
+    gap: 0px;
+    height: 90vh;
+    width: 90vw;
+    margin: auto;
 }
 
-.item {
-    background-color: brown;
-    padding: 5px;
-    min-width: 50px;
-    border: 2px solid #000;
-    font-size: large;
-
+.container img {
+    width: 0%;
+    flex-grow: 1;
+    object-fit: cover;
+    transition: .5s ease;
 }
 
-.item img {
-    width: 200px;
-    height: 100%;
-    object-fit: contain;
+body {
+    background: rgba(160, 77, 9, 0.815);
+    margin: 5vh 5vw;
+}
+
+.container img:hover {
+    cursor: crosshair;
+    opacity: 1;
+    width: 300px;
+    filter: contrast(120%);
+}
+
+@media (width < 600px) {
+    .container {
+        flex-direction: column;
+    }
+
+
+
+
+    .container img {
+        height: 0%;
+        width: 90vw;
+    }
+
+    .container img:hover {
+        width: 90vw;
+        height: 60vh;
+    }
 
 }
